fixes nav out of place

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -43,6 +43,7 @@
     top: -webkit-calc(50% - 56px);
     top:         calc(50% - 56px);
     transform: translateY(-50%);
+    margin: 0 auto;
 
     .menu-icon {
         display: none;
@@ -95,6 +96,7 @@
         .trigger {
             clear: both;
             display: none;
+            text-align: center;
         }
 
         &:hover .trigger {
