--- a/css/main.scss
+++ b/css/main.scss
@@ -13,7 +13,7 @@ $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 $footer-height:    80px;
-$menu-width:       50px;
+$menu-width:       65px;
 
 $text-color:       rgb(220,220,220);
 $background-color: rgb(85,85,85);
